// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hashtag rendering WHEN disabled in config THEN hashtags don't get parsed or processed 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>#test</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering WHEN disabled in config THEN hashtags don't get parsed or processed 2`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>#test</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering WHEN hashtag with prefix "HTML: THEN hashtag has prefix: PUBLISHING" 1`] = `
VFile {
  "contents": "<h1 id=\\"one\\">One<a aria-hidden=\\"true\\" class=\\"anchor-heading icon-link\\" href=\\"#one\\"></a></h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #c95efb;\\" href=\\"/foo/notes/tags.my-hash.tag0\\">#my-hash.tag0</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering compile "HTML: inside a link" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a href=\\"https://twitter.com/hashtag/dendron\\">#dendron</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering compile "HTML: inside a link" 2`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a href=\\"https://twitter.com/hashtag/dendron\\">#dendron</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering compile "HTML: simple" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #c95efb;\\" href=\\"tags.my-hash.tag0\\">#my-hash.tag0</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
